updates to design to make it more of a portal

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-
+   
+  <meta name="viewport" content="width=device-width">
+	
 	<meta name="description" content="Websites! @bysusanlin">
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/screen.css">
+
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
 
@@ -33,37 +37,65 @@
 <body>
 
 	<header>
-	
-		<img src="images/dribbble-peekaboo.png" width="80px">
 
+		<img src="images/dribbble-peekaboo.png" width="80px">
+		<br>
+		<p>
+			Susan Lin is a Designer and Illustrator.
+			<br>
+			This is her little portal on the internet.
+		</p>
+
+		<div class="social">
+		          <a href="https://twitter.com/bysusanlin"><svg version="1" xmlns="http://www.w3.org/2000/svg" width="25" height="21" viewBox="0 0 25 21"><path fill="#55ACEE" d="M25.18 2.728c-.919.41-1.908.684-2.945.812 1.059-.635 1.871-1.645 2.254-2.84-.991.586-2.089 1.014-3.255 1.242-.937-.994-2.27-1.617-3.745-1.617-2.832 0-5.128 2.296-5.128 5.129 0 .398.044.791.133 1.168-4.265-.213-8.044-2.252-10.573-5.361-.443.761-.695 1.644-.695 2.581 0 1.778.905 3.351 2.282 4.269-.84-.025-1.632-.258-2.325-.645v.068c0 2.485 1.769 4.559 4.114 5.029-.429.117-.882.182-1.35.182-.33 0-.653-.033-.965-.094.652 2.037 2.546 3.521 4.791 3.562-1.756 1.375-3.967 2.195-6.371 2.195-.414 0-.821-.023-1.223-.07 2.27 1.453 4.966 2.303 7.862 2.303 9.435 0 14.595-7.815 14.595-14.596l-.018-.66c1.003-.722 1.874-1.63 2.562-2.657z"/></svg></a></a>
+             
+             <a href="https://dribbble.com/bysusanlin"><svg version="1" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#EA4C89" d="M10.955 8.275c-1.697-3.018-3.514-5.48-3.647-5.66-2.74 1.295-4.784 3.819-5.418 6.86.257.004 4.348.052 9.065-1.2zm1.224 3.301l.386-.117c-.244-.559-.513-1.119-.794-1.67-5.06 1.514-9.912 1.402-10.083 1.4l-.009.311c0 2.523.955 4.827 2.52 6.566l-.006-.008s2.687-4.767 7.986-6.482zm-6.716 7.667l.002-.007-.224-.167.222.174zm3.683-17.276l-.024.004.024-.004zm8.84 2.162c-1.73-1.523-4-2.45-6.486-2.45-.8 0-1.571.099-2.313.276.149.199 1.992 2.648 3.669 5.73 3.705-1.388 5.105-3.515 5.13-3.556zm-6.486 18.871c-6.352 0-11.5-5.149-11.5-11.5 0-6.35 5.148-11.5 11.5-11.5s11.5 5.15 11.5 11.5c0 6.351-5.148 11.5-11.5 11.5zm1.67-9.891c-5.764 2.006-7.666 6.046-7.705 6.127 1.664 1.301 3.758 2.086 6.035 2.086 1.361 0 2.656-.277 3.834-.778-.145-.862-.717-3.87-2.098-7.457l-.066.022zm.443-3.961c.229.469.449.945.652 1.425l.213.507c3.393-.428 6.73.295 6.84.322-.023-2.332-.855-4.468-2.234-6.143-.02.034-1.594 2.306-5.471 3.889zm1.463 3.481c1.291 3.545 1.812 6.428 1.912 7.017 2.203-1.489 3.771-3.849 4.207-6.587-.193-.067-2.943-.936-6.119-.43z"/></svg></a>
+             
+             <a href="http://instagram.com/susanl"><svg version="1" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"><path fill="#3F729B" d="M17.25 10.75c0 3.59-2.91 6.5-6.501 6.5-3.59 0-6.5-2.91-6.5-6.5 0-.428.044-.846.122-1.252h-4.371v8.643c0 1.855 1.503 3.36 3.359 3.36h14.78c1.854 0 3.359-1.505 3.359-3.36v-8.643h-4.371c.08.406.123.824.123 1.252zm.889-10.75h-14.78c-1.856 0-3.359 1.504-3.359 3.359v3.641h5.439c1.178-1.663 3.117-2.749 5.309-2.749s4.132 1.086 5.309 2.749h5.441v-3.641c0-1.855-1.505-3.359-3.359-3.359zm1.642 4.15c0 .329-.27.599-.599.599h-1.8c-.332 0-.602-.27-.602-.599v-1.8c0-.33.27-.6.602-.6h1.8c.329 0 .599.27.599.6v1.8zm-5.033 6.6c0-2.209-1.789-4-4-4s-3.999 1.791-3.999 4 1.789 4 3.999 4 4-1.791 4-4z"/></svg></a>
+            </div>
 	</header>
 
+	<hr>
 
 	<div id="content">
 
-		<p>
-			<img src="drawings/code.png">
-		</p>
+		<ul>
 
+			<li> <a href="http://design.bysusanlin.com">
+					<img src="drawings/web.png" height="80px">
+					<img src="drawings/mobile.png" height="60px"> <br>
+					<span class="title">design portfolio</span>
+					<p> A comprehensive look at my work. I've worked with Trulia, Blippy, and on side projects. </p>
+				</a>
 
-	<p> 
-			Susan Lin is a Designer and Illustrator. <br>
-			This is her little portal on the internet.
-			<br>
-			She is currently freelancing and was most recently Senior Visual UX Designer at Trulia. Prior to that she graduated from Carnegie Mellon University's MHCI program.
-		<br>
-		Susan also draws. You may know her for sketchnoting at events or watercolor paintings. Miyazaki inspires her like no other.
-		<br>
-		For her full work history, have a copy of her <a href="/SusanLin-Resume.pdf">pretty PDF resume.</a>
-	</p>
+			<li> <a href="http://cargocollective.com/susan"> 
+					<img src="drawings/paintings.png" height="80px"> <br>
+					<span class="title">art portfolio</span> <br>
+					<p> A quick pull together of my artwork. For a more up to date log, check out my blog. </p>
+				</a> 
 
+			<li> <a href="http://sketch.bysusanlin.com"> 
+					<img src="drawings/sketchnotes.png" height="80px"> <br>
+					<span class="title"> sketch blog </span><br>
+					<p> Originally a sketch a day, now a process log of my art, sketchnotes, and writing. </p>
+			</a>
 
-</div>
+			<li> <a href="http://daily.bysusanlin.com"> 
+				<img src="drawings/code.png" height="80px"> <br>
+				<span class="title">daily lifestream</span> <br>
+				<p> The newest addition to my family of sites: RSS feeds of articles and inspiration.</p> 
+ 				</a> 
 
+		</ul>
+		<div class="clear"></div>
 
+	</div>
+
+	<hr>
 
 	<footer>
-		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span> <br>
+		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span> 
+		<br>
 		<img src="images/earthbound.gif" width="42px"> 
 	</footer>
 
