fixed inconsistent footer, added contact info

--- a/index.html
+++ b/index.html
@@ -172,6 +172,18 @@
 			
 			</ul>
 
+			<hr>
+
+			<h3>Contact</h3>
+
+			<p>
+				You may send me an <a href="mailto:bysusanlin@gmail.com">email.</a> However, you may have better luck tweeting <a href="http://twitter.com/bysusanlin">@bysusanlin.</a>
+
+				I also frequent <a href="http://dribbble.com/bysusanlin">dribbble</a> and
+				<a href="http://pinterest.com/susanl">pinterest.</a>
+
+			</p>
+
 		</div> <!-- about -->
 
 	</div> <!-- content -->
