--- a/talks/index.html
+++ b/talks/index.html
@@ -149,15 +149,39 @@
 
 			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
 
+			<br>
+
+			<p>
+				If you're interested in having me speak, <a href="mailto:bysusanlin@gmail.com?subject=Speaking%20Inquiry">send me an email.</a>
+			</p>
+
 		</div> <!-- about -->
 
 	</div> <!-- content -->
 
 	<footer>
-		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span> 
+
+		<a href="https://github.com/bysl/bysl.github.io">Hosted on Github</a>
+		
 		<br>
+
+		Typeset in Pluto Sans &amp; Lora
+
+		<br>
+
+		Updated August 2014
+
+		<br>
+
+		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a>
+		</span> 
+		
+		<br>
+		
 		<img src="../images/earthbound.gif" width="42px"> 
+
 	</footer>
+
 
 </body>
 
