--- a/index.html
+++ b/index.html
@@ -177,10 +177,9 @@
 			<h3>Contact</h3>
 
 			<p>
-				You may send me an <a href="mailto:bysusanlin@gmail.com">email.</a> However, you may have better luck tweeting <a href="http://twitter.com/bysusanlin">@bysusanlin.</a>
+				You may send me an <a href="mailto:bysusanlin@gmail.com">email.</a> Sometimes you may have better luck tweeting <a href="http://twitter.com/bysusanlin">@bysusanlin.</a>
 
-				I also frequent <a href="http://dribbble.com/bysusanlin">dribbble</a> and
-				<a href="http://pinterest.com/susanl">pinterest.</a>
+				I frequent <a href="http://instagram.com/susanl">Instagram</a>, <a href="http://dribbble.com/bysusanlin">Dribbble</a>, and <a href="http://pinterest.com/susanl/pins">Pinterest.</a>
 
 			</p>
 
