made site responsive, because everyone loves that

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<li> <a href="/">About</a>
 			<li> <a href="/talks/">Talks</a>
 
-			<li class="heart"> &#10084; 
+			<li class="heart"> &#10084;
 
       <li> <a href="http://sketch.bysusanlin.com">Blog</a>
       <li> <a href="http://design.bysusanlin.com">Design</a>
@@ -186,6 +186,50 @@
 		</div> <!-- about -->
 
 	</div> <!-- content -->
+
+	<ul id="mob-nav">
+		<a href="/">
+			<li>
+				About
+			</li>
+		</a>
+		
+		<a href="/talks/">
+			<li>
+				Talks
+			</li>
+		</a>
+
+		<li class="heart">
+			&#10084;
+		</li>
+
+    <a href="http://sketch.bysusanlin.com">
+    	<li>
+    		Blog
+    	</li>
+    </a>
+  	<a href="http://design.bysusanlin.com">
+  		<li>
+  			Design
+  		</li>
+  	</a>
+  	<a href="http://cargocollective.com/susan">
+  		<li>
+  			Art
+  		</li>
+  	</a>
+  	<a href="http://daily.bysusanlin.com">
+  		<li>
+  			Daily
+  		</li>
+  	</a>
+  	<a href="/library">
+  		<li>
+  			Library
+  		</li>
+  	</a>
+	</ul>
 
 	<footer>
 
