--- a/talks/index.html
+++ b/talks/index.html
@@ -145,7 +145,11 @@
 
 			<br>
 
-			<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
+			<div class="video-wrapper">
+				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+			<br>
 
 			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
 
@@ -158,6 +162,50 @@
 		</div> <!-- about -->
 
 	</div> <!-- content -->
+
+	<ul id="mob-nav">
+		<a href="/">
+			<li>
+				About
+			</li>
+		</a>
+		
+		<a href="/talks/">
+			<li>
+				Talks
+			</li>
+		</a>
+
+		<li class="heart">
+			&#10084;
+		</li>
+
+    <a href="http://sketch.bysusanlin.com">
+    	<li>
+    		Blog
+    	</li>
+    </a>
+  	<a href="http://design.bysusanlin.com">
+  		<li>
+  			Design
+  		</li>
+  	</a>
+  	<a href="http://cargocollective.com/susan">
+  		<li>
+  			Art
+  		</li>
+  	</a>
+  	<a href="http://daily.bysusanlin.com">
+  		<li>
+  			Daily
+  		</li>
+  	</a>
+  	<a href="/library">
+  		<li>
+  			Library
+  		</li>
+  	</a>
+	</ul>
 
 	<footer>
 
