added panel section to mentions

--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
 				<li> League of Kind and Kindred <a href="http://createsend.com/t/r-F3B94803B6EB9A202540EF23F30FEDED">On saying 'Yes!' to everything</a><br>
 			
 			</ul>
+			<ul>
+
+				Panels
+
+				<li> #DesignTalk <a href="http://padlet.com/norisjavier/designtalk"> Virtual Panel about design, creativity, &amp; collaboration</a>
+
+			</ul>
 
 			<hr>
 
