--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			</h3>
 
 			<p>
-				She is currently Freelancing and was Senior Visual UX and coding Designer at <a href="http://trulia.com/CA/San_Francisco">Trulia.</a> She graduated from <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Carnegie Mellon University's MHCI program.</a>
+				She is currently Freelancing and was Senior Visual UX and <a href="/talks">coding Designer at Trulia.</a> She is a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Carnegie Mellon MHCI</a> alumni.
 			</p>
 
 			<p>
