updated mentions section with the 1000th cut post feature

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
 
 				Watercolor
 
+				<li> Featured post on Medium <a href="https://twitter.com/Medium/status/507981746038509568">The 1000th Cut</a>
+
 				<li> Collaboration with designer Jon Bell <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">Designing while Shipping</a>
 
 				<li> Sticky Jots <a href="http://blog.stickyjots.com/post/58338157896/lovely-watercolor-wireframes-done-by-susan-lin">Watercolor Wireframes</a>
