updated letter with betwixt link, added cover photo to mentions section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
 
 			<hr>
 
+			<br>
+
+			<img src="images/mentions.png">
+
 			<h3>
 				Mentions
 			</h3>
@@ -170,7 +174,7 @@
 
 				Writing
 
-				<li> League of Kind and Kindred <a href="http://createsend.com/t/r-F3B94803B6EB9A202540EF23F30FEDED">On saying 'Yes!' to everything</a><br>
+				<li> Betwixt: League of Kind and Kindred <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">On saying 'Yes!' to everything</a><br>
 			
 			</ul>
 			<ul>
