revamping my short bio

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<img src="images/bysusanlin.jpg">
 
 			<h3>
-				Susan Lin, Designer &amp; Illustrator
+				Susan Lin, Coding Designer &amp; Illustrator
 			</h3>
 
 			<p>
