updated website with new portrait, rearranged content

--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -8,12 +8,12 @@
 	<meta name="description" content="Websites! @bysusanlin">
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/screen.css">
+	<link rel="stylesheet" href="/css/reset.css">
+	<link rel="stylesheet" href="/css/screen.css">
 
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
 
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
+	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 
 	<link rel="SHORTCUT ICON" href="favicon.ico">
 
@@ -78,6 +78,15 @@
 		});
 		
 	</script>
-    
 
 </head>
+
+<body>
+
+	<header>
+
+			<a href="/">
+				<img src="/images/bysusanlin-totoro.svg" height="100px">
+			</a>
+
+	</header>
