--- a/src/index.html
+++ b/src/index.html
@@ -1,126 +1,33 @@
 {% include '_tpls/header.html' %}
-
-<body>
-
-	<header>
-
-			<a href="/">
-				<img src="/images/bysusanlin-totoro.svg" height="100px">
-			</a>
-
-	</header>
-
-	<nav>
-		<ul>
-
-			<li> <a href="/">About</a>
-			<li> <a href="/talks/">Talks</a>
-			<li> <a href="/highlights/">Highlights</a>
-
-			<li class="heart"> &#10084;
-
-      <li> <a href="http://sketch.bysusanlin.com">Blog</a>
-      <li> <a href="http://design.bysusanlin.com">Design</a>
-      <li> <a href="http://cargocollective.com/susan">Art</a>
-      <li> <a href="http://daily.bysusanlin.com">Daily</a>
-      <li> <a href="/library">Library</a>
-
-			<li> <a href="#" class="go-top">&uarr;</a>
-
-		</ul>
-	</nav>
+{% include '_tpls/nav.html' %}
 
 	<div id="content">
 
 		<div class="about">
 
-			<img src="images/bysusanlin-portrait.png" height="140px" width="140px" alt="bysusanlin portrait">
+			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
-				Susan Lin, Coding Designer &amp; Illustrator
+				Coding Designer &amp; Illustrator
 			</h3>
 
 			<p>
-								Susan is a Coding Designer &amp; Illustrator based in a sketchbook. She is currently Senior Experience Designer @ <a href="">OpenTable.</a> She paints <a href="">Ghibli Stained Glass</a> and <a href="">The Watercolor Forest.</a>
-
-				She is currently Freelancing and was Senior Visual UX and <a href="/talks">coding Designer at Trulia.</a> She is a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Carnegie Mellon MHCI</a> alumni.
+				Hello World; I'm a person who likes to make things. I work at <a href="">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
 			</p>
 
 			<p>
-				Susan also draws. You may know her for <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnoting at events</a> or <a href="http://instagram.com/susanl">watercolor paintings.</a>
-				Miyazaki inspires her like no other.
+				I draw incessantly. You may have seen my <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnotes</a> out in the wild. I paint the <a href="">Ghibli Stained Glass</a> series and <a href="">Watercolor Forest.</a>
+				Hayao Miyazaki inspires me like no other.
 			</p>
 
 			<p>
-				For her full work history, see her <a href="/SusanLin-resume.pdf">pretty PDF resume.</a>
+				I enjoy games and books. <a href="http://www.pinterest.com/pin/275423333437253958/">Ramona Flowers</a> is my spirit animal. My hair has been blue, purple, pink, red, green, and blue. &#10052;
 			</p>
 
 		</div> <!-- about -->
 
 	</div> <!-- content -->
 
-	<ul id="mob-nav">
-		<a href="/">
-			<li>
-				About
-			</li>
-		</a>
-		
-		<a href="/talks/">
-			<li>
-				Talks
-			</li>
-		</a>
+{% include '_tpls/mobnav.html' %}
 
-		<li class="heart">
-			&#10084;
-		</li>
-
-    <a href="http://sketch.bysusanlin.com">
-    	<li>
-    		Blog
-    	</li>
-    </a>
-  	<a href="http://design.bysusanlin.com">
-  		<li>
-  			Design
-  		</li>
-  	</a>
-  	<a href="http://cargocollective.com/susan">
-  		<li>
-  			Art
-  		</li>
-  	</a>
-  	<a href="http://daily.bysusanlin.com">
-  		<li>
-  			Daily
-  		</li>
-  	</a>
-  	<a href="/library">
-  		<li>
-  			Library
-  		</li>
-  	</a>
-	</ul>
-
-	<footer class="grid container">
-
-		<div class="grid-cell">
-			<p>
-				Susan is a Coding Designer &amp; Illustrator based in a sketchbook.
-				Say hi <a href="http://twitter.com/bysusanlin">@bysusanlin.</a> She frequents <a href="http://instagram.com/susanl"> Instagram</a> and <a href="http://pinterest.com/susanl/pins">Pinterest.</a> 
-				<br><br>
-				<span class="brandFont h7">&#10052; Updated 11.2014</span>
-			</p>
-		</div>
-
-		<div class="grid-cell">
-			<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span> <br>
-					<img src="images/earthbound.gif" width="42px">
-		</div>
-
-	</footer>
-
-</body>
-
-</html>
+{% include '_tpls/footer.html' %}
