hope this works

--- a/talks/index.html
+++ b/talks/index.html
@@ -114,25 +114,48 @@
 
 	<div id="content">
 
-		<div class="about">
+		<div class="about">			
 
-			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img src="../images/bysusanlin-speaking.jpg">
 
 			<h3>
-				Coding Designer &amp; Illustrator
+				Talks
 			</h3>
 
 			<p>
-				Hello World; I'm a person who likes to make things. I work at <a href="">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
+				I'm interested in speaking about process, specifically about styleguides and CSS. Previously, I've presented the value of creating and maintaining a component library.
 			</p>
 
-			<p>
-				I draw incessantly. You may have seen my <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnotes</a> out in the wild. I paint the <a href="">Ghibli Stained Glass</a> series and <a href="">Watercolor Forest.</a>
-				Hayao Miyazaki inspires me like no other.
-			</p>
+			<ul>
+
+				Experience
+				
+				<li> IXDA San Francisco: <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a>
+
+				<li> Thoughtbot Product Design Talks: <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a>
+
+				<li> Carnegie Mellon: <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
+
+				<li> Academy of Arts: Guest Lecture for Visual Design Studio
+
+			</ul>
+
+			<hr>
+
+			<br>
+
+			<div class="video-wrapper">
+				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+			<br>
+
+			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
+
+			<h3>Contact</h3>
 
 			<p>
-				I enjoy games and books. <a href="http://www.pinterest.com/pin/275423333437253958/">Ramona Flowers</a> is my spirit animal. My hair has been blue, purple, pink, red, green, and blue. &#10052;
+				If you're interested in having me speak: bysusanlin at gmail. &#10052;
 			</p>
 
 		</div> <!-- about -->
@@ -188,7 +211,6 @@
   		</li>
   	</a>
 	</ul>
-
 	<footer class="container">
 		<div class="footer-container">
 
