--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 		<div class="about">
 
-			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img src="/images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
 				Coding Designer &amp; Illustrator
