--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
 
 		<div class="about">
 
-			<img src="/images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
 				Coding Designer &amp; Illustrator
 			</h3>
 
 			<p>
-				Hello World; I'm a person who likes to make things. I work at <a href="">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
+				Hello World; I'm a person who likes to make things. I work at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
 			</p>
 
 			<p>
-				I draw incessantly. You may have seen my <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnotes</a> out in the wild. I paint the <a href="">Ghibli Stained Glass</a> series and <a href="">Watercolor Forest.</a>
+				I draw incessantly. You may have seen my <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnotes</a> out in the wild. I paint the <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and <a href="http://cargocollective.com/susan/The-Forest">Watercolor Forest.</a>
 				Hayao Miyazaki inspires me like no other.
 			</p>
 
