library link was broken, deleted unused css

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -11,7 +11,7 @@
       <li> <a href="http://sketch.bysusanlin.com">Blog</a>
       <li> <a href="http://cargocollective.com/susan">Art</a>
       <li> <a href="http://daily.bysusanlin.com">Daily</a>
-      <li> <a href="http://library.bysusanlin.com">Library</a>
+      <li> <a href="http://bysusanlin.com/library">Library</a>
       <li> <a href="http://instagram.com/susanl">Instagram</a>
       <!-- <li> <a href="http://etsy.com/bysusanlin">Shop</a> -->
 
