--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -6,7 +6,7 @@
 			<li> <a href="/talks/">Talks</a>
 			<li> <a href="/work/">Work</a>
 
-			<li class="typeHighlight"> &#10052;
+			<li class="typeHighlight h5"> &#10052;
 
       <li> <a href="http://sketch.bysusanlin.com">Blog</a>
       <li> <a href="http://cargocollective.com/susan">Art</a>
