--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/screen.css">
 
+	<script src="//use.typekit.net/bku8hxc.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
