--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -12,12 +12,12 @@
 			</h3>
 
 			<p>
-				I'm interested in speaking about process, specifically about styleguides and CSS. Previously, I've presented the value of creating and maintaining a component library.
+				I enjoy sharing the work I've done. If you're interested in collaborating, I'd love to hear about it: bysusanlin at gmail.
 			</p>
 
 			<ul>
 
-				Experience
+				Past Talks
 				
 				<li> IXDA San Francisco: <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a>
 
@@ -26,6 +26,9 @@
 				<li> Carnegie Mellon: <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
 
 				<li> Academy of Arts: Guest Lecture for Visual Design Studio
+
+				<li> #DesignTalk: <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel</a>
+
 
 			</ul>
 
@@ -40,12 +43,6 @@
 			<br>
 
 			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
-
-			<h3>Contact</h3>
-
-			<p>
-				If you're interested in having me speak: bysusanlin at gmail. &#10052;
-			</p>
 
 		</div> <!-- about -->
 
