updated work section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/screen.css">
 
+	<script src="//use.typekit.net/bku8hxc.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
@@ -105,7 +108,7 @@
       <li> <a href="http://daily.bysusanlin.com">Daily</a>
       <li> <a href="http://bysusanlin.com/library">Library</a>
       <li> <a href="http://instagram.com/susanl">Instagram</a>
-      <!-- <li> <a href="http://etsy.com/bysusanlin">Shop</a> -->
+      <li> <a href="http://etsy.com/bysusanlin">Shop</a>
 
 			<li> <a href="#" class="go-top">&uarr;</a>
 
