--- a/talks/index.html
+++ b/talks/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/screen.css">
 
+	<script src="//use.typekit.net/bku8hxc.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
@@ -105,7 +108,7 @@
       <li> <a href="http://daily.bysusanlin.com">Daily</a>
       <li> <a href="http://bysusanlin.com/library">Library</a>
       <li> <a href="http://instagram.com/susanl">Instagram</a>
-      <!-- <li> <a href="http://etsy.com/bysusanlin">Shop</a> -->
+      <li> <a href="http://etsy.com/bysusanlin">Shop</a>
 
 			<li> <a href="#" class="go-top">&uarr;</a>
 
@@ -123,12 +126,12 @@
 			</h3>
 
 			<p>
-				I'm interested in speaking about process, specifically about styleguides and CSS. Previously, I've presented the value of creating and maintaining a component library.
+				I enjoy sharing the work I've done. If you're interested in collaborating, I'd love to hear about it: bysusanlin at gmail.
 			</p>
 
 			<ul>
 
-				Experience
+				Past Talks
 				
 				<li> IXDA San Francisco: <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a>
 
@@ -137,6 +140,9 @@
 				<li> Carnegie Mellon: <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
 
 				<li> Academy of Arts: Guest Lecture for Visual Design Studio
+
+				<li> #DesignTalk: <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel</a>
+
 
 			</ul>
 
@@ -151,12 +157,6 @@
 			<br>
 
 			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
-
-			<h3>Contact</h3>
-
-			<p>
-				If you're interested in having me speak: bysusanlin at gmail. &#10052;
-			</p>
 
 		</div> <!-- about -->
 
