copy edit, lol shop prelaunch but ok

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -13,7 +13,7 @@
       <li> <a href="http://daily.bysusanlin.com">Daily</a>
       <li> <a href="http://bysusanlin.com/library">Library</a>
       <li> <a href="http://instagram.com/susanl">Instagram</a>
-      <li> <a href="http://etsy.com/bysusanlin">Shop</a>
+      <li> <a href="http://etsy.com/shop/bysusanlin">Shop</a>
 
 			<li> <a href="#" class="go-top">&uarr;</a>
 
