--- a/src/work/index.html
+++ b/src/work/index.html
@@ -52,7 +52,7 @@
 				<li> 
 					<img src="../images/work/sociallist-list.png">
 					<p>
-						Sociallist. A productivity app inspired by source control. The idea was the provide a beautiful writing experience with the ability to turn any line into an action item. Eventually, users could 'fork' lists. 
+						Sociallist. A productivity app inspired by source control. The idea was the provide a beautiful writing experience with the ability to turn any line into an action item. 
 					</p>
 					<br>
 
