copy edit, lol shop prelaunch but ok

--- a/work/index.html
+++ b/work/index.html
@@ -108,7 +108,7 @@
       <li> <a href="http://daily.bysusanlin.com">Daily</a>
       <li> <a href="http://bysusanlin.com/library">Library</a>
       <li> <a href="http://instagram.com/susanl">Instagram</a>
-      <li> <a href="http://etsy.com/bysusanlin">Shop</a>
+      <li> <a href="http://etsy.com/shop/bysusanlin">Shop</a>
 
 			<li> <a href="#" class="go-top">&uarr;</a>
 
@@ -166,7 +166,7 @@
 				<li> 
 					<img src="../images/work/sociallist-list.png">
 					<p>
-						Sociallist. A productivity app inspired by source control. The idea was the provide a beautiful writing experience with the ability to turn any line into an action item. Eventually, users could 'fork' lists. 
+						Sociallist. A productivity app inspired by source control. The idea was the provide a beautiful writing experience with the ability to turn any line into an action item. 
 					</p>
 					<br>
 
