adding fade in animation

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
 		<div class="about">
 
-			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img class="animated fadeIn" src="images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
 				Coding Designer &amp; Illustrator
