--- a/src/work/index.html
+++ b/src/work/index.html
@@ -6,7 +6,7 @@
 
 		<div class="about">			
 
-			<img src="../images/bysusanlin-work.jpg">
+			<img class="animated fadeIn" src="../images/bysusanlin-work.jpg">
 
 			<h3>
 				Work
@@ -45,7 +45,7 @@
 				<li>
 					<a href="http://daily.bysusanlin.com">
 					<img src="../images/work/daily.png">
-					<p> Daily.</a> Daily is a stream page of RSS feeds I frequent. It's set as my homepage when starting up my browser. The project was designed from <a href="http://instagram.com/p/r35yvby49T/?modal=true">a sketch</a> and then right in the code.
+					<p> Daily.</a> Daily is a stream page of RSS feeds I frequent. It's set as my homepage when starting up my browser. The project was designed from <a href="http://instagram.com/p/r35yvby49T/?modal=true">a sketch</a> and then built right in the code.
 					</p>
 					<br>
 
