--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -5,7 +5,7 @@
 
 		<div class="about">			
 
-			<img src="../images/bysusanlin-speaking.jpg">
+			<img class="animated fadeIn" src="../images/bysusanlin-speaking.jpg">
 
 			<h3>
 				Talks
