--- a/src/work/index.html
+++ b/src/work/index.html
@@ -6,7 +6,7 @@
 
 		<div class="about">			
 
-			<img class="animated fadeIn" src="../images/bysusanlin-work.jpg">
+			<img src="../images/bysusanlin-work.jpg">
 
 			<h3>
 				Work
