--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/screen.css">
-	<link rel="stylesheet" href="/css/animate.min.css">
+	<link rel="stylesheet" href="/css/animate.css">
 
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -88,7 +88,7 @@
 	<header>
 
 			<a href="/">
-				<img src="/images/bysusanlin-totoro.svg" height="120px">
+				<img src="/images/bysusanlin-totoro.svg" height="100px">
 			</a>
 
 	</header>
