--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
 
 		<div class="about">
 
-			<img class="animated fadeIn" src="images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
-				Coding Designer &amp; Illustrator
+				Designer, Moonlight Painter
 			</h3>
 
 			<p>
-				Hello World; I'm a person who likes to make things. I work at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
+				Hello World; I'm a designer who codes. I currentlywork at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I am a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI alum.</a>
 			</p>
 
 			<p>
