--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/screen.css">
-	<link rel="stylesheet" href="/css/animate.min.css">
+	<link rel="stylesheet" href="/css/animate.css">
 
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -88,7 +88,7 @@
 	<header>
 
 			<a href="/">
-				<img src="/images/bysusanlin-totoro.svg" height="120px">
+				<img src="/images/bysusanlin-totoro.svg" height="100px">
 			</a>
 
 	</header>
@@ -117,14 +117,14 @@
 
 		<div class="about">
 
-			<img class="animated fadeIn" src="images/bysusanlin.jpg" alt="bysusanlin portrait">
+			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
 
 			<h3>
-				Coding Designer &amp; Illustrator
+				Designer, Moonlight Painter
 			</h3>
 
 			<p>
-				Hello World; I'm a person who likes to make things. I work at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I graduated from Carnegie Mellon with a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI</a> and <a href="http://www.cmu.edu/interdisciplinary/">BXA.</a>
+				Hello World; I'm a designer who codes. I currentlywork at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I am a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI alum.</a>
 			</p>
 
 			<p>
