earthbounded source update

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,35 @@
 {% include '_tpls/header.html' %}
+
+	<title>Susan &times; Internet</title>
+
+</head>
+
+<body class="home">
+
+	<div id="earthbounded" class="left">
+		<!-- sprite here ^__^ -->
+	</div>	
+
+	<div id="ufo" class="">
+	</div>
+
+	<div id="onett">
+		<div id="trees"></div>
+	</div>
+
+	<div id="saturn">
+		<div id="valley"></div>
+		<div id="distorter" class="phased1"></div>
+	</div>	
+
+	<div id="pinkcloud">
+		<div id="clouds"></div>
+	</div>	
+
+	<div id="moonside">
+		<div id="ending" class=""></div>
+	</div>
+
+
 {% include '_tpls/nav.html' %}
-
-	<div id="content">
-
-		<div class="about">
-
-			<img src="images/bysusanlin.jpg" alt="bysusanlin portrait">
-
-			<h3>
-				Designer, Moonlight Painter
-			</h3>
-
-			<p>
-				Hello World; I'm a designer who codes. I currentlywork at <a href="https://twitter.com/opentabledesign">OpenTable</a> on the Experience Design team. I am a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">MHCI alum.</a>
-			</p>
-
-			<p>
-				I draw incessantly. You may have seen my <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">sketchnotes</a> out in the wild. I paint the <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and <a href="http://cargocollective.com/susan/The-Forest">Watercolor Forest.</a>
-				Hayao Miyazaki inspires me like no other.
-			</p>
-
-			<p>
-				I enjoy games and books. <a href="http://www.pinterest.com/pin/275423333437253958/">Ramona Flowers</a> is my spirit animal. My hair has been blue, purple, pink, red, green, and blue. &#10052;
-			</p>
-
-		</div> <!-- about -->
-
-	</div> <!-- content -->
-
-{% include '_tpls/mobnav.html' %}
-
 {% include '_tpls/footer.html' %}
