--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -1,40 +1,44 @@
 {% include '_tpls/header.html' %}
-{% include '_tpls/nav.html' %}
+	
+	<title>Susan &times; Talks</title>
 
-	<div id="content">
+</head>
 
-		<div class="about">			
+<body>
 
-			<img src="../images/bysusanlin-speaking.jpg">
+	<div id="talks">
+		
+		<div class="intro">
 
-			<h3>
+			<h2>
 				Talks
-			</h3>
+			</h2>
 
 			<p>
-				I enjoy sharing the work I've done. If you're interested in collaborating, I'd love to hear about it: bysusanlin at gmail.
+				I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
 			</p>
 
-			<ul>
+			<p>
+				Past Talks:
+				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> </li>
 
-				Past Talks
-				
-				<li> IXDA San Francisco: <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a>
+				<li> Thoughtbot Product Design Talks &mdash; <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a> </li>
 
-				<li> Thoughtbot Product Design Talks: <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a>
+				<li> Carnegie Mellon University &mdash; <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a> </li>
 
-				<li> Carnegie Mellon: <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
+				<li> Academy of Arts &mdash; Guest Lecture for Visual Design Studio </li>
 
-				<li> Academy of Arts: Guest Lecture for Visual Design Studio
+				<li> #DesignTalk &mdash; <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel on Twitter</a> </li>
 
-				<li> #DesignTalk: <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel</a>
+			</p>
 
+		</div>
 
-			</ul>
+		<div class="video">
 
-			<hr>
-
-			<br>
+			<p> 
+				Speaking the Code &mdash; Video &amp; Slides
+			</p>
 
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
@@ -44,9 +48,9 @@
 
 			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
 
-		</div> <!-- about -->
+		</div> <!-- video -->
 
-	</div> <!-- content -->
+	</div> <!--talks-->
 
-{% include '_tpls/mobnav.html' %}
+{% include '_tpls/nav.html' %}
 {% include '_tpls/footer.html' %}
