--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -1,20 +1,30 @@
 
 	<nav>
 		<ul>
-
-			<li> <a href="/">About</a>
-			<li> <a href="/talks/">Talks</a>
-			<li> <a href="/work/">Work</a>
-
-			<li class="typeHighlight h5"> &#10052;
-
-      <li> <a href="http://sketch.bysusanlin.com">Blog</a>
-      <li> <a href="http://cargocollective.com/susan">Art</a>
-      <li> <a href="http://daily.bysusanlin.com">Daily</a>
-      <li> <a href="http://bysusanlin.com/library">Library</a>
-      <li> <a href="http://instagram.com/susanl">Instagram</a>
-
-			<li> <a href="#" class="go-top">&uarr;</a>
-
+			<a href="">
+				<li>
+					<img src="/images/bysusanlin-totoro.svg" height="40px">
+				</li>
+			</a>
+			<a href="#" class="aboutOverlay">
+				<li>
+					About
+				</li>
+			</a>			
+			<a href="/work">
+				<li>
+					Work
+				</li>
+			</a>
+			<a href="/talks">
+				<li>
+					Talks
+				</li>
+			</a>			
+			<a href="http://sketch.bysusanlin.com">
+				<li>
+					Blog
+				</li>
+			</a>
 		</ul>
 	</nav>
