bug fixes for broken links and a few misalgned things

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -1,7 +1,7 @@
 
 	<nav>
 		<ul>
-			<a href="">
+			<a href="/">
 				<li>
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
