--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -46,7 +46,9 @@
 
 			<br>
 
-			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
+			<div class="speakerdeck-wrapper">
+				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
+			</div>
 
 		</div> <!-- video -->
 
