--- a/src/_tpls/footer.html
+++ b/src/_tpls/footer.html
@@ -52,7 +52,7 @@
 
 		<p>
 
-			<img src="images/bysusanlin-portrait.png" height="100px">
+			<img src="/images/bysusanlin-portrait.png" height="100px">
 
 			<br><br>
 
@@ -76,8 +76,7 @@
 	<script>try{Typekit.load();catch(e){</script>
 	-->
 
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
-
+	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 	<script type="text/javascript">
 
   	$(document).ready(function(){
