--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<nav>
 		<ul>
-			<a href="">
+			<a href="/">
 				<li>
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
@@ -128,7 +128,7 @@
 
 		<p>
 
-			<img src="images/bysusanlin-portrait.png" height="100px">
+			<img src="/images/bysusanlin-portrait.png" height="100px">
 
 			<br><br>
 
@@ -152,8 +152,7 @@
 	<script>try{Typekit.load();catch(e){</script>
 	-->
 
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
-
+	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 	<script type="text/javascript">
 
   	$(document).ready(function(){
