--- a/talks/index.html
+++ b/talks/index.html
@@ -59,7 +59,9 @@
 
 			<br>
 
-			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
+			<div class="speakerdeck-wrapper">
+				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
+			</div>
 
 		</div> <!-- video -->
 
@@ -68,7 +70,7 @@
 
 	<nav>
 		<ul>
-			<a href="">
+			<a href="/">
 				<li>
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
@@ -149,7 +151,7 @@
 
 		<p>
 
-			<img src="images/bysusanlin-portrait.png" height="100px">
+			<img src="/images/bysusanlin-portrait.png" height="100px">
 
 			<br><br>
 
@@ -173,8 +175,7 @@
 	<script>try{Typekit.load();catch(e){</script>
 	-->
 
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
-
+	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 	<script type="text/javascript">
 
   	$(document).ready(function(){
