--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -37,17 +37,11 @@
 		<div class="video">
 
 			<p> 
-				Speaking the Code &mdash; Video &amp; Slides
+				Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
 			</p>
 
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
-			</div>
-
-			<br>
-
-			<div class="speakerdeck-wrapper">
-				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
 			</div>
 
 		</div> <!-- video -->
