--- a/talks/index.html
+++ b/talks/index.html
@@ -50,17 +50,11 @@
 		<div class="video">
 
 			<p> 
-				Speaking the Code &mdash; Video &amp; Slides
+				Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
 			</p>
 
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
-			</div>
-
-			<br>
-
-			<div class="speakerdeck-wrapper">
-				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js" width="500"></script>
 			</div>
 
 		</div> <!-- video -->
@@ -170,10 +164,8 @@
 
 	</div>
 
-	<!--
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
 	<script>try{Typekit.load();catch(e){</script>
-	-->
 
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 	<script type="text/javascript">
