--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<title>Susan &times; Internet</title>
+	
+	<script src="//use.typekit.net/bku8hxc.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 </head>
 
