--- a/work/index.html
+++ b/work/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<script src="http://use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();catch(e){</script>
+	<script src="//use.typekit.net/bku8hxc.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<title>Susan &times; Work</title>
 
