add speaking photo

--- a/talks/index.html
+++ b/talks/index.html
@@ -60,6 +60,8 @@
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
 
+			<img src="/images/bysusanlin-speaking.jpg">
+
 		</div> <!-- video -->
 
 	</div> <!--talks-->
