move around pieces on Talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -26,14 +26,12 @@
 		
 		<div class="intro">
 
-			<img src="/images/bysusanlin-speaking.jpg">
-
 			<h2>
 				Talks
 			</h2>
 
 			<p>
-				I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
+				I enjoy speaking about design process especially where it meets the code and how it relates to illustration. I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
 			</p>
 
 			<p>
@@ -54,13 +52,15 @@
 
 		<div class="video">
 
-			<p> 
-				Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
-			</p>
+			<img src="/images/bysusanlin-speaking.jpg">
 
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
+
+			<p> 
+				Recording of Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
+			</p>
 
 		</div> <!-- video -->
 
