--- a/talks/index.html
+++ b/talks/index.html
@@ -58,8 +58,9 @@
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
 
+			<h2> Speaking the Code </h2>
 			<p> 
-				Recording of Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
+				Recording of my talk for IXDASF August of 2013. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
 			</p>
 
 		</div> <!-- video -->
