--- a/talks/index.html
+++ b/talks/index.html
@@ -60,7 +60,9 @@
 
 			<h2> Speaking the Code </h2>
 			<p> 
-				Recording of my talk for IXDASF August of 2013. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
+				Recording of my talk for IXDA SF. 
+				<br>
+				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
 			</p>
 
 		</div> <!-- video -->
