updated images for nasa and raincat

--- a/work/index.html
+++ b/work/index.html
@@ -170,7 +170,7 @@
 		</div>
 
 		<div>
-			<img src="/images/work/raincat.gif">
+			<img src="/images/work/raincat.jpg">
 			<h2> Old work that's interesting: Indie Games </h2>
 			<p>
 				During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views.
