--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 
 	<title>Susan &times; Internet</title>
-	
-	<script src="//use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
 
 </head>
 
@@ -106,6 +103,12 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					04. Blog
+				</li>
+			</a>			
+
+			<a href="http://twitter.com/bysusanlin">
+				<li>
+					05. Twitter
 				</li>
 			</a>
 
