--- a/talks/index.html
+++ b/talks/index.html
@@ -128,6 +128,12 @@
 				</li>
 			</a>
 
+			<a href="http://twitter.com/bysusanlin">
+				<li>
+					05. Twitter
+				</li>
+			</a>
+
 			<li class="typeHighlight">
 				&#10048;
 			</li>
