max width on video

--- a/talks/index.html
+++ b/talks/index.html
@@ -54,14 +54,15 @@
 
 			<img src="/images/bysusanlin-speaking.jpg">
 
+			<br><br>
+
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 			<h2> Speaking the Code </h2>
 			<p> 
-				Recording of my talk for IXDA SF. 
-				<br>
+				Recording of my talk for IXDA SF. I spoke about working with engineers using Trulia's component library.
 				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
 			</p>
 
