max width on video

--- a/talks/index.html
+++ b/talks/index.html
@@ -63,7 +63,8 @@
 			<h2> Speaking the Code </h2>
 			<p> 
 				Recording of my talk for IXDA SF. I spoke about working with engineers using Trulia's component library.
-				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">See slides on SpeakerDeck.</a>
+				<br><br>
+				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
 			</p>
 
 		</div> <!-- video -->
